--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Your Name
-    email = your.email@example.com
+    name = Muhammad Atif Ali
+    email = me@matifali.dev
 
 [core]
     editor = nano
