Update editor and add new configurations

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
     email = me@matifali.dev
 
 [core]
-    editor = nano
+    editor = vim
     autocrlf = input      # Handles line endings automatically
 
 [alias]
