--- a/.config/ghostty/ghostty.conf
+++ b/.config/ghostty/ghostty.conf
@@ -21,34 +21,34 @@ clipboard-trim-trailing-spaces = true
 macos-non-native-fullscreen = visible-menu
 background-opacity = 0.95
 
+# Theme Catppuccin
+background           = 1E1E2E
+foreground           = CDD6F4
+cursor-color         = F5E0DC
+selection-background = F5E0DC
+selection-foreground = 1E1E2E
 
-## Colors
-background = 161616
-foreground = f2f4f8
-
-cursor-color = f81894
-
-# black
-palette = 0=#282828
-palette = 8=#484848
-# red
-palette = 1=#ee5396
-palette = 9=#f16da6
-# green
-palette = 2=#25be6a
-palette = 10=#46c880
-# yellow
-palette = 3=#08bdba
-palette = 11=#2dc7c4
-# blue
-palette = 4=#78a9ff
-palette = 12=#8cb6ff
-# purple
-palette = 5=#be95ff
-palette = 13=#c8a5ff
-# aqua
-palette = 6=#33b1ff
-palette = 14=#52bdff
-# white
-palette = 7=#dfdfe0
-palette = 15=#e4e4e5
+## black
+palette = 0=#45475A
+palette = 8=#585B70
+## red
+palette = 1=#F38BA8
+palette = 9=#F38BA8
+## green
+palette = 2=#A6E3A1
+palette = 10=#A6E3A1
+## yellow
+palette = 3=#F9E2AF
+palette = 11=#F9E2AF
+## blue
+palette = 4=#89B4FA
+palette = 12=#89B4FA
+## magenta
+palette = 5=#F5C2E7
+palette = 13=#F5C2E7
+## cyan
+palette = 6=#94E2D5
+palette = 14=#94E2D5
+## white
+palette = 7=#BAC2DE
+palette = 15=#A6ADC8 
