--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,6 @@
 # Fonts
-font-family = Monaspace Argon Var
-font-family-bold = Monaspace Argon Var
+font-family = Hack Nerd Font
+font-family-bold = Hack Nerd Font
 
 font-feature = ss01
 font-feature = ss02
