--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,7 @@
 # Fonts
 font-family = Hack Nerd Font
 font-family-bold = Hack Nerd Font
+font-size = 10
 
 font-feature = ss01
 font-feature = ss02
