--- a/.gitconfig
+++ b/.gitconfig
@@ -40,7 +40,7 @@
     defaultBranch = main
 
 [credential "https://github.com"]
-    helper = gh auth git-credential
+	helper = !gh auth git-credential
 
 [credential "https://gist.github.com"]
-    helper = gh auth git-credential
+	helper = !gh auth git-credential
