--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -3,3 +3,7 @@ font-family = Hack Nerd Font
 font-family-bold = Hack Nerd Font
 clipboard-trim-trailing-spaces = true
 theme = catppuccin-mocha
+
+# Shell integration
+shell-integration = detect
+shell-integration-features = cursor,sudo,title,ssh-env,ssh-terminfo
