Refactor font installation and update settings.json
- Changed font installation to use JetBrainsMono NerdFontMono.
- Updated settings.json with new agent and theme configurations.
- Removed unused SSH connections from Zed settings.
- Consolidated extension installations in install.sh script.

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -7,3 +7,4 @@ theme = catppuccin-mocha
 # Shell integration
 shell-integration = detect
 shell-integration-features = cursor,sudo,title,ssh-env,ssh-terminfo
+keybind = shift+enter=text:\n
