--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,37 +7,28 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "ssh_connections": [
-    {
-      "host": "dogfood.coder",
-      "projects": [
-        {
-          "paths": [
-            "~/repos/coder/modules"
-          ]
-        }
-      ]
-    }
-  ],
+  "icon_theme": "Material Icon Theme",
   "features": {
     "edit_prediction_provider": "zed"
   },
-  "assistant": {
+  "agent": {
+    "play_sound_when_agent_done": true,
+    "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-3-7-sonnet-latest"
-    },
-    "version": "2"
+      "model": "claude-sonnet-4-thinking"
+    }
   },
   "ui_font_size": 14,
   "buffer_font_size": 14,
+  "agent_font_size": 14,
   "theme": {
     "mode": "system",
-    "light": "One Light",
-    "dark": "One Dark"
+    "light": "macOS Classic Light",
+    "dark": "macOS Classic Dark"
   },
   "terminal": {
-    "font_family": "Hack Nerd Font",
+    "font_family": "JetBrainsMono Nerd Font Mono",
     "font_size": 14,
     "shell": {
       "program": "zsh"
