Add auto-update channel to ghostty config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -2,9 +2,11 @@
 font-family = Hack Nerd Font
 font-family-bold = Hack Nerd Font
 clipboard-trim-trailing-spaces = true
-theme = catppuccin-mocha
 
 # Shell integration
 shell-integration = detect
 shell-integration-features = cursor,sudo,title,ssh-env,ssh-terminfo
 keybind = shift+enter=text:\n
+
+# Update
+auto-update-channel = tip
