--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,7 +7,17 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "icon_theme": "Material Icon Theme",
+  "calls": {
+    "mute_on_join": true
+  },
+  "use_smartcase_search": true,
+  "buffer_font_family": ".ZedMono",
+  "redact_private_values": true,
+  "icon_theme": {
+    "mode": "system",
+    "light": "Material Icon Theme",
+    "dark": "Material Icon Theme"
+  },
   "features": {
     "edit_prediction_provider": "zed"
   },
@@ -15,19 +25,22 @@
     "play_sound_when_agent_done": true,
     "always_allow_tool_actions": true,
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-sonnet-4-thinking"
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
     }
   },
   "ui_font_size": 14,
   "buffer_font_size": 14,
-  "agent_font_size": 14,
+  "agent_ui_font_size": 14,
   "theme": {
     "mode": "system",
     "light": "macOS Classic Light",
     "dark": "macOS Classic Dark"
   },
   "terminal": {
+    "toolbar": {
+      "breadcrumbs": true
+    },
     "font_family": "JetBrainsMono Nerd Font Mono",
     "font_size": 14,
     "shell": {
